# [workspace]
# members = [
#     "crates/sys-info",
#     "crates/sys-utils"
# ]
# [lib]
# crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
base64 = []
random = ["rand"]
std = ["random"]
crypto = ["base64", "random"]
sys_info = ["sys-info"]
sys_utils = ["sys-utils"]
log = [] # 待开发

[dependencies]
rand = { version = "0.8.4", optional = true, features = ["small_rng"] }
sys-info = { version = "*", path = "crates/sys-info", optional = true }
sys-utils = { version = "*", path = "crates/sys-utils", optional = true, features = ["dns", "traceroute"]}

[target.'cfg(windows)'.dependencies]
[target.'cfg(unix)'.dependencies]
[dev-dependencies]

[[example]]
name = "std"
required-features = ["std"]
[[example]]
name = "base64"
required-features = ["base64"]
[[example]]
name = "random"
required-features = ["random"]
[[example]]
name = "sys_info"
path = "examples/sys_info.rs"
required-features = ["sys_info"]
[[example]]
path = "examples/sys_dns.rs"
name = "sys_dns"
required-features = ["sys_utils"]
[[example]]
path = "examples/sys_traceroute.rs"
name = "sys_traceroute"
required-features = ["sys_utils"]

# [profile.release]
# lto = true
# strip = true
# opt-level = "z"
# codegen-units = 1
# panic = "abort"
# incremental = false

[package]
name = "e-utils"
version = "0.1.0"
edition = "2021"
authors = ["Eternal <EternalNight996@gmail.com,EternalNightYeah2@yeah.net>"]
description = "utils"
license-file = "GNU-LICENSE"
repository = ""
rust-version = "1.62.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html