[lib]
crate-type = ["cdylib", "rlib"]
name = "sys_info"
path = "src/lib.rs"

[features]
default = ["serde"]

[dependencies]
libc = "0.2.29"
log = "0.4.5"
serde = { version = "1", features = ["derive"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["minwindef", "ntdef", "ntstatus", "sysinfoapi", "winnt", "winuser", "libloaderapi", "processthreadsapi", "winerror", "winreg"] }

[build-dependencies]
cc = "1"

[package]
name = "sys-info"
version = "0.1.0"
edition = "2021"
authors = ["1379 <EternalNightYeah2@yeah.net>"]
description = "cross platform get OS infomation api"
license-file = "../../GNU-LICENSE"
repository = ""
rust-version = "1.62.0"
build = "./build.rs"
links = "links"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html